--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongodb": "^4.13.0",
-    "mongoose": "^6.8.3"
+    "mongoose": "^6.8.3",
+    "swagger-autogen": "^2.22.0",
+    "swagger-ui-express": "^4.6.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
